# study-rust

./: .gitignore  Cargo.toml  rust-toolchain.toml
crates/blog-api/: .env  Cargo.toml
crates/blog-api/src/: db.rs  main.rs  models.rs  routes.rs
crates/blog-api/src/handlers/: article.rs  user.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: download.rs  main.rs
crates/minigrep/src/: lib.rs  main.rs
crates/multi-thread-web-server/: Cargo.toml
crates/multi-thread-web-server/src/: lib.rs  main.rs
crates/my-lists/: Cargo.toml
crates/my-lists/src/: first.rs  five.rs  four.rs  lib.rs  second.rs  six.rs  three.rs
crates/my-redis/: Cargo.toml
crates/my-redis/src/: main.rs
crates/single-thread-web-server/: Cargo.toml
crates/single-thread-web-server/src/: main.rs
crates/todo-cli/: Cargo.toml
crates/todo-cli/src/: commands.rs  main.rs  model.rs  storage.rs
scripts/: test.sh
