[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
axum = "0.7"
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

